<resources>
    <string name="app_name">DPI Tunnel</string>
    <string name="app_ascii_logo_lock">\u00A0\u00A0\u00A0\u00A0____\n\u00A0\u00A0\u00A0//\"\"\\\\\n\u00A0\u00A0||\u00A0\u00A0\u00A0\u00A0||\n\u00A0\u00A0||____||\n\u00A0//******\\\\\n||***/\\***||\n||***\\/***||\n\u00A0\\\\******//\n\u00A0\u00A0\u00A0\"\"\"\"\"\"</string>
    <string name="app_ascii_logo_unlock">\u00A0\u00A0\u00A0\u00A0____\n\u00A0\u00A0\u00A0//\"\"\\\\\n\u00A0\u00A0||\u00A0\u00A0\u00A0\u00A0||\n\u00A0\u00A0\u00A0_____||\n\u00A0//******\\\\\n||***/\\***||\n||***\\/***||\n\u00A0\\\\******//\n\u00A0\u00A0\u00A0\"\"\"\"\"\"</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="port">Port:</string>
    <string name="other">Other</string>
    <string name="split_summary">If this option is enabled, server requests are divided into parts</string>
    <string name="split_title">Split requests</string>
    <string name="split_position_title">Split position</string>
    <string name="split_position_summary">Click to set request split position</string>
    <string name="socks5_title">Use socks5 proxy</string>
    <string name="socks5_summary">If this option is enabled, requests to the server go through a sock5 proxy</string>
    <string name="http_header_title">Change HOST header</string>
    <string name="http_header_summary">If this option is enabled, the HOST header changes to the specified</string>
    <string name="http_header_spell_title">HOST header spell</string>
    <string name="http_dot_title">Add dot after host name</string>
    <string name="http_dot_summary">If this option is enabled, a dot is added after the server name.</string>
    <string name="http_tab_summary">If this option is enabled, a tab is added after the server name.</string>
    <string name="http_tab_title">Add tab after host name</string>
    <string name="http_space_host_title">Remove space after HOST header</string>
    <string name="http_space_host_summary">If this option is enabled, the space after the HOST header is removed</string>
    <string name="http_space_method_title">Add space after method</string>
    <string name="http_space_method_summary">If this option is enabled, a space after the method is added</string>
    <string name="http_newline_method_title">Add newline before method</string>
    <string name="http_newline_method_summary">If this option is enabled, a newline is added before the method</string>
    <string name="http_unix_newline_title">Use UNIX style newlines</string>
    <string name="http_unix_newline_summary">If this option is enabled, the end of the line in UNIX style is used</string>
    <string name="doh_title">Use DoH protocol</string>
    <string name="doh_summary">This option enables DoH protocol support for DNS queries</string>
    <string name="dns_doh_hostlist_title">Use DoH protocol only for sites in hostlist</string>
    <string name="dns_doh_hostlist_summary">If this option is enabled, the DoH protocol is used only for sites in the hostlist (requires enabling DoH protocol and hostlist support options)</string>
    <string name="dns_doh_server_title">DNS server address</string>
    <string name="dns_doh_server_summary">DNS server is used only for DoH requests. Supports only JSON based servers</string>
    <string name="other_hostlist_title">Use hostlist</string>
    <string name="other_hostlist_summary">If this option is enabled, DPI bypass methods are applied only to sites from the list (the list is located in the program folder and is updated with a button on the main screen)</string>
    <string name="other_socks5_title">SOCKS5 proxy address</string>
    <string name="other_bind_port_title">DPITunnel port</string>
    <string name="other_bind_port_summary">Specifies the port on which the local http proxy DPITunnel server is running</string>
    <string name="other_proxy_setting_title">Set DPITunnel proxy globally</string>
    <string name="other_proxy_setting_summary">Set DPITunnel proxy global automatically on start (require root)</string>
    <string name="update_hostlist">Update hostlist</string>
    <string name="update_hostlist_ok">Hostlist updated successfully</string>
    <string name="update_hostlist_bad">There is error while updating hostlist</string>
    <string name="please_run_service">DPI Tunnel service isn\'t running. Please, run it</string>
</resources>
